--- a/views/404.html
+++ b/views/404.html
@@ -1,3 +1,68 @@
-<body>
-    <h1>404</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Error: 404</title>
+  <link rel="stylesheet" href="/css/main.css" />
+</head>
+
+<body tabindex="-1">
+  <div class="navbar bg-base-100">
+    <div class="flex-1">
+      <a class="btn btn-ghost normal-case text-xl" href="/">Lego Collection</a>
+    </div>
+    <div class="dropdown">
+      <label tabindex="0" class="btn btn-ghost sm:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+        </svg>
+      </label>
+      <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+        <li><a class="active" href="/about">About</a></li>
+        <li>
+          <details>
+            <summary>
+              Theme
+            </summary>
+            <ul class="p-2 bg-base-100">
+              <li><a href="/lego/sets?theme=someTheme">Theme 1</a></li>
+              <li><a href="/lego/sets?theme=someTheme2">Theme 2</a></li>
+              <li><a href="/lego/sets?theme=someTheme3">Theme 3</a></li>
+            </ul>
+          </details>
+        </li>
+      </ul>
+    </div>
+
+    <div class="navbar-center hidden sm:flex">
+      <ul class="menu menu-horizontal px-1">
+        <li><a href="/about">About</a></li>
+        <li>
+          <details>
+            <summary>Theme</summary>
+            <ul class="p-2 bg-base-100 right-0">
+                <li><a href="/lego/sets?theme=someTheme">Theme 1</a></li>
+                <li><a href="/lego/sets?theme=someTheme2">Theme 2</a></li>
+                <li><a href="/lego/sets?theme=someTheme3">Theme 3</a></li>
+            </ul>
+          </details>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="container mx-auto">
+    <div class="hero min-h-screen bg-base-200">
+        <div class="hero-content text-center">
+          <div>
+            <h1 class="text-5xl font-bold">ERROR: 404</h1>
+            <p class="py-6">Page Not Found.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+  
 </body>
+</html>
