--- a/views/about.html
+++ b/views/about.html
@@ -1,3 +1,77 @@
-<body>
-    <h1>About</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About</title>
+  <link rel="stylesheet" href="/css/main.css" />
+</head>
+
+<body tabindex="-1">
+  <div class="navbar bg-base-100">
+    <div class="flex-1">
+      <a class="btn btn-ghost normal-case text-xl" href="/">Lego Collection</a>
+    </div>
+    <div class="dropdown">
+      <label tabindex="0" class="btn btn-ghost sm:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+        </svg>
+      </label>
+      <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+        <li><a class="active" href="/about">About</a></li>
+        <li>
+          <details>
+            <summary>
+              Theme
+            </summary>
+            <ul class="p-2 bg-base-100">
+              <li><a href="/lego/sets?theme=someTheme">Theme 1</a></li>
+              <li><a href="/lego/sets?theme=someTheme2">Theme 2</a></li>
+              <li><a href="/lego/sets?theme=someTheme3">Theme 3</a></li>
+            </ul>
+          </details>
+        </li>
+      </ul>
+    </div>
+
+    <div class="navbar-center hidden sm:flex">
+      <ul class="menu menu-horizontal px-1">
+        <li><a class="active" href="/about">About</a></li>
+        <li>
+          <details>
+            <summary>Theme</summary>
+            <ul class="p-2 bg-base-100 right-0">
+                <li><a href="/lego/sets?theme=someTheme">Theme 1</a></li>
+                <li><a href="/lego/sets?theme=someTheme2">Theme 2</a></li>
+                <li><a href="/lego/sets?theme=someTheme3">Theme 3</a></li>
+            </ul>
+          </details>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="container mx-auto">
+    <div class="hero min-h-screen bg-base-200">
+      <h1>About</h1>
+      <p>All about me! LEGOLEGOLEGOLEGOLEGOLEGOLEGOLEGO
+        LEGOLEGOLEGOLEGOLEGOLEGOLEGOLEGOLEGOLEGOLEGOLEGO
+      </p>
+    </div>
+
+    <div class="grid md:grid-cols-2 gap-4">
+        <figure>
+          <img class="w-full" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fexternal-preview.redd.it%2FQBJniN11RHsM3K4WvdZJBsEAd5sazYIKOrqTw6dye_c.jpg%3Fauto%3Dwebp%26s%3Dc74c4d08769d2d14ebee21f51617bffe5b3faa98&f=1&nofb=1&ipt=7e9d0ae19cd1597d580f3e2cbc8a3b814d8a6bc668ca581cb6a6719807a3ef61&ipo=images">
+        </figure>
+        <p>
+          Hi! I'm Connor, I enjoy programming, video games, 
+          skiing, biking, music, and a whole bunch of other things.
+
+          I'm currently taking WEB322!
+        </p>
+    </div>
+  </div>
 </body>
+</html>
