--- a/views/home.html
+++ b/views/home.html
@@ -27,9 +27,9 @@
               Theme
             </summary>
             <ul class="p-2 bg-base-100">
-              <li><a href="/lego/sets?theme=someTheme">Theme 1</a></li>
-              <li><a href="/lego/sets?theme=someTheme2">Theme 2</a></li>
-              <li><a href="/lego/sets?theme=someTheme3">Theme 3</a></li>
+              <li><a href="/lego/sets?theme=tech">Technic</a></li>
+              <li><a href="/lego/sets?theme=supp">Supplemental</a></li>
+              <li><a href="/lego/sets?theme=town">Town</a></li>
             </ul>
           </details>
         </li>
@@ -43,9 +43,9 @@
           <details>
             <summary>Theme</summary>
             <ul class="p-2 bg-base-100 right-0">
-                <li><a href="/lego/sets?theme=technic">Technic</a></li>
-                <li><a href="/lego/sets?theme=supplemental">Supplemental</a></li>
-                <li><a href="/lego/sets?theme=someTheme3">Bricks & More</a></li>
+                <li><a href="/lego/sets?theme=tech">Technic</a></li>
+                <li><a href="/lego/sets?theme=supp">Supplemental</a></li>
+                <li><a href="/lego/sets?theme=town">Town</a></li>
             </ul>
           </details>
         </li>
