--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,55 +9,13 @@
 </head>
 
 <body tabindex="-1">
-  <div class="navbar bg-base-100">
-    <div class="flex-1">
-      <a class="btn btn-ghost normal-case text-xl" href="/">Lego Collection</a>
-    </div>
-    <div class="dropdown">
-      <label tabindex="0" class="btn btn-ghost sm:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-        </svg>
-      </label>
-      <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a href="/about">About</a></li>
-        <li>
-          <details>
-            <summary>
-              Theme
-            </summary>
-            <ul class="p-2 bg-base-100">
-              <li><a href="/lego/sets?theme=tech">Technic</a></li>
-              <li><a href="/lego/sets?theme=supp">Supplemental</a></li>
-              <li><a href="/lego/sets?theme=town">Town</a></li>
-            </ul>
-          </details>
-        </li>
-      </ul>
-    </div>
-
-    <div class="navbar-center hidden sm:flex">
-      <ul class="menu menu-horizontal px-1">
-        <li><a href="/about">About</a></li>
-        <li>
-          <details>
-            <summary>Theme</summary>
-            <ul class="p-2 bg-base-100 right-0">
-                <li><a href="/lego/sets?theme=tech">Technic</a></li>
-                <li><a href="/lego/sets?theme=supp">Supplemental</a></li>
-                <li><a href="/lego/sets?theme=town">Town</a></li>
-            </ul>
-          </details>
-        </li>
-      </ul>
-    </div>
-  </div>
-
+  <%- include('partials/navbar', {page: '/'}) %>
+  
   <div class="container mx-auto">
     <div class="hero min-h-screen bg-base-200">
         <div class="hero-content text-center">
           <div class="max-w-md">
-            <h1 class="text-5xl font-bold">Hello, Welcome to my Lego Collection!</h1>
+            <h1 class="text-5xl font-bold">Hello, Welcome To My Lego Collection!</h1>
             <p class="py-6">We have a diverse collection of sets from Lego's history. From Medieval to Space, we have everything in between and more.</p>
             <a href="/lego/sets">
                 <button class="btn btn-primary">Show me</button>
@@ -109,93 +67,3 @@
   </div>
 </body>
 </html>
-
-  <!-- <div class="container mx-auto">
-    <div class="grid grid-cols-1 mb-6">
-      <div class="border-2 rounded-box p-2">Title</div>
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
-      <div class="border-2 rounded-box p-2">01</div>
-      <div class="border-2 rounded-box p-2">02</div>
-      <div class="border-2 rounded-box p-2">03</div>
-      <div class="border-2 rounded-box p-2">04</div>
-      <div class="border-2 rounded-box p-2">05</div>
-    </div>
-
-    <div class="overflow-x-auto">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Apples</td>
-            <td>Bananas</td>
-          </tr>
-          <tr>
-            <td>Cherries</td>
-            <td>Dates</td>
-          </tr>
-          <tr>
-            <td>Elderberry</td>
-            <td>Fig</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <form>
-      <div class="container mx-auto mb-6">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-          <div>
-            <label class="label"><span class="label-text">Name</span></label>
-            <input class="input input-bordered w-full" type="text" id="name" name="name"
-              placeholder="Enter your name" />
-          </div>
-          <div>
-            <label class="label"><span class="label-text">Message</span></label>
-            <textarea class="textarea textarea-bordered w-full" id="message" name="message"
-              placeholder="Enter your message"></textarea>
-          </div>
-          <div>
-            <label class="label"><span class="label-text">Fast Food</span></label>
-            <select class="select select-bordered w-full">
-              <option disabled selected>Fast Food</option>
-              <option>Pizza</option>
-              <option>Hamburger</option>
-            </select>
-          </div>
-          <div>
-            <label class="label cursor-pointer justify-normal">
-              <input type="radio" name="pets" class="radio" /> <span class="label-text px-2">Dogs</span>
-            </label>
-            <label class="label cursor-pointer justify-normal">
-              <input type="radio" name="pets" class="radio" checked />
-              <span class="label-text px-2">Cats</span>
-            </label>
-          </div>
-          <div>
-            <label class="label cursor-pointer justify-normal">
-              <input type="checkbox" name="active" class="checkbox" />
-              <span class="label-text px-2">Active</span>
-            </label>
-          </div>
-        </div>
-      </div>
-    </form>
-
-    <div class="card w-96 bg-base-100 shadow-xl mb-6">
-      <figure>
-        <img class="w-full" src="https://fakeimg.pl/375x375?text=[+SHOES+]" alt="Shoes" />
-      </figure>
-      <div class="card-body">
-        <h2 class="card-title">Shoes!</h2>
-        <p>If a dog chews shoes whose shoes does he choose?</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">Buy Now</button>
-        </div>
-      </div>
-    </div> -->
