--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -29,14 +29,18 @@
         </div>
       </div>
 
-      <table class="table table-zebra">
+      <table class="table">
         <tbody>
             <% sets.forEach(set=>{ %>
-              <tr>
-                <td><div class="avatar">
-                  <div class="w-32 h-32 rounded-lg bg-transparent bg-no-repeat bg-cover"><img src="<%= set.img_url %>"></div>
-                </div></td>
-                <td><%= set.name %> | <a href=/lego/sets?theme=Technic" class="btn  mt-2 btn-xs">Technic</a></td>
+              <tr class="hover">
+                <td>
+                  <div class="avatar">
+                    <div class="rounded">
+                      <img src="<%= set.img_url %>" />
+                    </div>
+                  </div>
+                </td>
+                <td><%= set.name %> | <a href=/lego/sets?theme=<%= set.theme %>" class="btn  mt-2 btn-xs"><%= set.theme %></a></td>
                 <td><span class="font-bold">Year: </span><%= set.year %> - <span class="font-bold">Parts: </span><%= set.num_parts %></td>
                 <th>
                   <a href="/lego/sets/<%= set.set_num %>" class="btn btn-xs">details</a>
