Updated 404 and fixed Sets Theme Search

--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -40,10 +40,10 @@
                         src="<%= set.img_url %>" />
                     </div> -->
 
-                    <div class="w-32 h-32 rounded-lg bg-transparent bg-no-repeat bg-cover" style="background-image: url('<%= set.img_url %>');"></div>
+                    <div class="w-32 h-32 bg-cover bg-transparent rounded-lg bg-no-repeat" style="background-image: url('<%= set.img_url %>')"></div>
                   </div>
                 </td>
-                <td><%= set.name %> | <a href=/lego/sets?theme=<%= set.theme %>" class="btn  mt-2 btn-xs"><%= set.theme %></a></td>
+                <td><%= set.name %> | <a href="/lego/sets?theme=<%= set.theme %>" class="btn  mt-2 btn-xs"><%= set.theme %></a></td>
                 <td><span class="font-bold">Year: </span><%= set.year %></td>
                 <td><span class="font-bold">Parts: </span><%= set.num_parts %></td>
                 <th>
