--- a/views/404.ejs
+++ b/views/404.ejs
@@ -16,7 +16,7 @@
         <div class="hero-content text-center">
           <div>
             <h1 class="text-5xl font-bold">ERROR: 404</h1>
-            <p class="py-6">Page Not Found.</p>
+            <p class="py-6"><%= message %></p>
           </div>
         </div>
       </div>
