--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -45,7 +45,7 @@
                 </td>
                 <td><%= set.name %> | <a href="/lego/sets?theme=<%= set.theme %>" class="btn  mt-2 btn-xs"><%= set.theme %></a></td>
                 <td><span class="font-bold">Year: </span><%= set.year %></td>
-                <td><span class="font-bold">Parts: </span><%= set.num_parts %></td>
+                <td><span class="font-bold">Parts: </span><%= set.num_parts == 0 ? 'Unknown' : set.num_parts %></td>
                 <th>
                   <a href="/lego/sets/<%= set.set_num %>" class="btn btn-xs">details</a>
                 </th>
