Full POSTGRES replacement of A4

--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -35,15 +34,10 @@
               <tr>
                 <td>
                   <div class="avatar">
-                    <!-- <div>
-                      <img class="w-1/5 rounded-lg bg-transparent bg-no-repeat bg-cover"
-                        src="<%= set.img_url %>" />
-                    </div> -->
-
                     <div class="w-32 h-32 bg-cover bg-transparent rounded-lg bg-no-repeat" style="background-image: url('<%= set.img_url %>')"></div>
                   </div>
                 </td>
-                <td><%= set.name %> | <a href="/lego/sets?theme=<%= set.theme %>" class="btn  mt-2 btn-xs"><%= set.theme %></a></td>
+                <td><%= set.name %> | <a href="/lego/sets?theme=<%= set.Theme.name %>" class="btn  mt-2 btn-xs"><%= set.Theme.name %></a></td>
                 <td><span class="font-bold">Year: </span><%= set.year %></td>
                 <td><span class="font-bold">Parts: </span><%= set.num_parts == 0 ? 'Unknown' : set.num_parts %></td>
                 <th>
