Edit and Delete set completed, A5 Completed

--- a/views/set.ejs
+++ b/views/set.ejs
@@ -49,6 +49,7 @@
   
           <span id="quote"></span>
           <br /><br />
+          <a class="btn btn-success btn-sm" href="/lego/editSet/<%= set.set_num %>">EDIT SET: <%= set.name %></a>
           <a class="btn btn-primary btn-sm" href="#" onclick="history.back(); return false;">RETURN</a>
          </p>
   
